--- a/sherlock/templates/index.html
+++ b/sherlock/templates/index.html
@@ -22,6 +22,24 @@
         <h2>2</h2>
     </div>
 
+    <div class="lower w3-container">
+            <div class="w3-row">
+            <div class="w3-border w3-container w3-twothird"  style="background-color: deepskyblue;">
+            <p>Sus (Source) View</p>
+            <div class="w3-padding w3-light-gray scroller" id="">
+                <textarea name="" id="source_view" cols="300" rows="10" readonly></textarea>
+
+            </div>
+            </div>
+            <div id="" class="w3-light-blue w3-border w3-container w3-third">
+                <p>Object View</p>
+                <textarea name="" id="object_view" cols="300" rows="10"></textarea>
+
+                </div>
+          </div>
+
+    </div>
+
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
